--- a/client/src/components/Details/Details.css
+++ b/client/src/components/Details/Details.css
@@ -458,9 +458,21 @@ p {
 }
 
 .single-title {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .single-content {
-    margin-top: 30px;
+  margin-top: 30px;
+}
+
+.buttons-div {
+  width: 40%;
+}
+
+.info-div {
+  height: 350px;
+}
+
+.img-div {
+  height: 350px;
 }
