--- a/client/src/components/Create/create.css
+++ b/client/src/components/Create/create.css
@@ -1,13 +1,17 @@
 form {
-    width: 60%;
-    margin: 0 auto;
-    margin-top: 60px;
+  width: 60%;
+  margin: 0 auto;
+  margin-top: 60px;
 }
 
 .form-title {
-    margin-top: 30px;
+  margin-top: 30px;
 }
 
 .btn {
-    float: left;
+  float: left;
+}
+#error-create {
+  background: whitesmoke;
+  border: none;
 }
