--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;1,300&display=swap");
+body {
+  margin-top: 0;
+}
 .App {
   text-align: center;
-  font-family: 'Anton', sans-serif;
+  font-family: "Work Sans", sans-serif;
 }
 
 .App-logo {
